--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ $(".typed-cursor").remove();
                      </div>
                      <div class="col-sm-7 text-center pull-right-sm">
                         <!--flipped on small, unflipped on large-->
-                        <img class="img-rounded portfolio-projects--image" src="Images/Sign Up.PNG">
+                        <img class="img-rounded portfolio-projects--image" src="Images/sign.png">
                      </div>
                   </div>
                </div>
