--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>.:Roja Dhanavath- C#.Net Developer:.</title>
+<title>.:Roja Dhanavath- Full Stack Software Developer.</title>
 <meta charset="utf-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -94,7 +94,7 @@ $(".typed-cursor").remove();
                   </div>
 
 
-   <h2 class="lead text-center">Living in <span class="middle-blue-font">New Jersy</span></h2>
+   <h2 class="lead text-center">Living in <span class="middle-blue-font">Arlington Virginia</span></h2>
     </div>
     </div>
 
@@ -114,7 +114,7 @@ $(".typed-cursor").remove();
                <img class="img-circle text-center profile-img" src="Images/Roja.bmp">
                <p class="text-center">Hi again, I'm Roja Dhanavath, a recent grauate from from Fairfield University in Software Engineering. I have a lot of enthusiasm for web developement and currently looking for full time opportunities as a full stack web developer. I am a person who has  high passion in development technologies. One of my dream is to master all the design technologies , Now I am working toward it!
 
-               I have a diverse set of skills In Microsoft Technologies, ranging from<I class="red"> .NET, ASP, ADO.NET, C#.Net, SOAP, Web services and MySQL, SQL </I>server administration.
+               I have a diverse set of skills In Technologies, ranging from<I class="red"> Java, Spring MVC, Spring Security, AWS(EC2,VPC, S3),Angular 4+, React.js ,C#.Net, SOAP, Web services and MySQL, SQL </I>server administration.
                   
                    </p>
             </div>
@@ -123,24 +123,24 @@ $(".typed-cursor").remove();
                <p class="text-center">Here's a few of the tools I use</p>
                <div class="col-xs-6">
                   <ul>
-                     <li>HTML5</li>
-                     <li>CSS3</li>
-                     <li>Javascript</li>
+                     <li>Angular 4</li>
+                     <li>TypeScript</li>
+                     <li>React.js</li>
                      <li>JQuery</li>
-                     <li>Angular 2</li>
-                     <li>LINQ</li>
-                     <li>SSIS</li>
+                     <li>Tableau Server</li>
+                     <li>Python</li>
+                     <li>Spring MVC</li>
                   </ul>
                </div>
                <div class="col-xs-6">
                   <ul>
                      <li>C#</li>
                      <li>Java</li>
-                     <li>Asp.Net MVC</li>
+                     <li>Asp.Net MVC/Core</li>
                      <li>SQL</li>
                      <li>PHP</li>
                      <li>AJAX</li>
-                     <li>SSRS</li>
+                     <li>Sql, PlSql</li>
                   </ul>
                </div>
 
