--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ $(function() {
     console.log( "ready!" );
 
 var options = {
-  strings: ["and I'm a C#.Net Developer"],
+  strings: ["and I'm a Certified Cloud Developer"],
   typeSpeed: 40
 }
  
@@ -186,7 +186,7 @@ $(".typed-cursor").remove();
                      </div>
                      <div class="col-sm-7 text-center pull-right-sm">
                         <!--flipped on small, unflipped on large-->
-                        <img class="img-rounded portfolio-projects--image" src="Images/sign.png">
+                        <img class="img-rounded portfolio-projects--image" src="Images/img-4.jpg">
                      </div>
                   </div>
                </div>
