updated profile with new projects

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ $(".typed-cursor").remove();
                         <a class="btn btn-rounded portfolio-projects--btn" href="https://github.com/Roja-dhanvath/Online-Conflicts" role="button">View Project</a>
                      </div>
                      <div class="col-sm-7 text-center">
-                        <img class="img-rounded portfolio-projects--image" src="Images/img-4.jpg">
+                        <img class="img-rounded portfolio-projects--image" src="Images/sign.PNG">
                      </div>
                   </div>
                </div>
