--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ $(".typed-cursor").remove();
             <a href="https://www.linkedin.com/in/roja-dhanavath-a43568130/">
                <li><i class="fa fa-linkedin-square"></i> LinkedIn</li>
             </a>
-            <a href="https://github.com/Roja-dhanvath">
+            <a href="https://github.com/rojadhanavath?tab=repositories">
                <li><i class="fa fa-github"></i> Github</li>
             </a>                    
             
